Fixed vh spacing

--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ body {
     color: white;
     background-color: black;
     max-width: 480px;
-    min-height: 100vh;
+    min-height: 99vh;
     text-align: center;
     border: white solid 2px;
     border-radius: 1.3rem;
     padding: 1rem;
+    margin-bottom: 0.5rem;
 }
 li {
     display: flex;
